# edulcni

./: .gitignore  Makefile  README.md  design_doc.md
.github/workflows/: static-portfolio.yml
codeforces-problem-test/: 2117-A.cpp  A  output.out
codeforces-problem-test/2117-A/: data.js  index.html
edulcni/: CMakeLists.txt  Makefile
edulcni/examples/: array_example.cpp  graph_dfs_example.cpp  mixed_types_example.cpp  std_sort_example.cpp  string_bubble_sort.cpp  tic_tac_toe.cpp
edulcni/include/: edulcni.hpp
edulcni/include/edulcni/core/: export.hpp  frame.hpp  json.hpp  render.hpp  state.hpp  widget.hpp
edulcni/include/edulcni/widgets/: array.hpp  game_board.hpp  game_types.hpp  graph.hpp  string_compare.hpp
edulcni/src/widgets/: game_board.cpp  graph.cpp  string_compare.cpp
edulcni/web/: index_template.html  tic_tac_toe.html
edulcni/web/css/: styles.css
edulcni/web/js/: canvas_renderer.js  edulcni_interactive.js  tic_tac_toe.js  tic_tac_toe.wasm  universal_viewer.js  viewer.js
edulcni/web/js/widgets/: string_compare.js
examples/: array_example.cpp  binary_mask_example.cpp  graph_dfs_example.cpp  shared_library_demo.cpp  std_sort_example.cpp  tic_tac_toe.cpp
examples/interactive/: tic_tac_toe.cpp
examples/shared/: shared_library_demo.cpp
examples/static/: array_example.cpp  compare_combined_example.cpp  data_structure_showcase.cpp  different_graphs_example.cpp  geometry_example.cpp  matrix_example.cpp  mixed_types_example.cpp  (+2 more)
include/: build_info.hpp  edulcni.hpp
scripts/: generate_static_portfolio.py
static/: sample_frames.js
(+47 files in other folders)
